--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon src/index.ts",
-    "db": "npx prisma studio"
+    "db": "npx prisma studio",
+    "prod": "STAGE=production npm run dev"
   },
   "keywords": [],
   "author": "",
@@ -13,13 +14,19 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.16.2",
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "lodash.merge": "^4.6.2",
+    "morgan": "^1.10.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
