--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,13 @@
+
 {
-    "compilerOptions": {
-      "sourceMap": true,
-      "outDir": "dist",
-      // "strict": true,
-      "lib": ["esnext"],
-      "esModuleInterop": true
-    }
+  "compilerOptions": {
+    "sourceMap": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": false,
+    "lib": ["esnext"],
+    "esModuleInterop": true,
+    "declaration": true
+  },
+  "include": ["src/**/*.ts"]
 }
